# rseata

./: .env  Cargo.toml  README.md
examples/: README.md
examples/example-proto/: Cargo.toml
examples/example-proto/proto/: rseata.proto
examples/example-proto/src/: client.rs  lazy.rs  lib.rs
examples/order-service/: Cargo.toml  order.sql
examples/order-service/src/: context.rs  main.rs
examples/order-service/src/order/: mod.rs  order.rs  prelude.rs
examples/order-service/src/service/: order_service.rs
examples/order-service/src/web/: mod.rs
examples/user-service/: Cargo.toml  user.sql
examples/user-service/src/: context.rs  main.rs
examples/user-service/src/grpc_service/: mod.rs
examples/user-service/src/service/: user_service.rs
examples/user-service/src/user/: user.rs
examples/user-service/src/web/: mod.rs
rseata-core/: Cargo.toml
rseata-core/src/: error.rs  grpc_layer.rs  grpc_server_interceptor.rs  handle_branch_type.rs  lib.rs  types.rs
rseata-core/src/branch/: branch_manager_inbound.rs  branch_manager_outbound.rs  branch_transaction.rs  mod.rs
rseata-core/src/coordinator/: core_holder.rs  core_service.rs  mod.rs  transaction_coordinator_inbound.rs  transaction_coordinator_outbound.rs
rseata-core/src/event/: event.rs  event_error.rs  event_handler.rs  event_handler_chain.rs  event_publisher.rs  event_type.rs  mod.rs
rseata-core/src/event/defaults/: default_event_handler_chain.rs  event_handlers.rs  event_publisher.rs  mod.rs
rseata-core/src/grpc_client/: grpc_client_impl.rs  lazy.rs  mod.rs  rm_grpc_client.rs  tm_grpc_client.rs
rseata-core/src/grpc_client/source/: mod.rs  rm_manager.rs
rseata-core/src/lock/: lock_manager.rs  lockable.rs  locker.rs  mod.rs  row_lock.rs
rseata-core/src/lock/defaults/: default_lock_manager.rs  default_locker.rs  default_row_lock.rs  mod.rs
rseata-core/src/resource/: mod.rs  resource_manager.rs  resource_registry.rs
rseata-core/src/session/: branch_session.rs  global_session.rs  mod.rs  session_condition.rs  session_helper.rs  session_life_cycle.rs  session_lifecycle_listener.rs  session_manager.rs  session_storable.rs
rseata-core/src/session/defaults/: default_branch_session.rs  default_global_session.rs  default_session_manager.rs  mod.rs
rseata-core/src/store/: memery_transaction_store_manager.rs  mod.rs  transaction_store_manager.rs
rseata-core/src/transaction/: transaction_manager.rs
rseata-db-proxy/: Cargo.toml
rseata-db-proxy/src/: demo.rs  lib.rs  table_primary_select.rs
rseata-db-proxy/src/sea_orm/: mod.rs
rseata-db-proxy/src/sea_orm/at/connection_proxy/: impl_branch_transaction.rs  impl_connection_trait.rs  impl_stream_trait.rs  impl_transaction_trait.rs  mod.rs
rseata-db-proxy/src/sea_orm/at/transaction_proxy/: impl_connection_trait.rs  impl_stream_trait.rs  impl_transaction_session.rs  impl_transaction_trait.rs  mod.rs
rseata-db-proxy/src/sea_orm/connection_proxy/: impl_connection_trait.rs  impl_stream_trait.rs  impl_transaction_trait.rs  mod.rs
rseata-db-proxy/src/sea_orm/transaction_proxy/: impl_connection_trait.rs  impl_stream_trait.rs  impl_transaction_session.rs  impl_transaction_trait.rs  mod.rs
rseata-db-proxy/src/sea_orm/xa/: mod.rs
rseata-db-proxy/src/sea_orm/xa/connection_proxy/: impl_branch_transaction.rs  impl_connection_trait.rs  impl_stream_trait.rs  impl_transaction_trait.rs  mod.rs
rseata-db-proxy/src/sea_orm/xa/transaction_proxy/: impl_branch_transaction.rs  impl_connection_trait.rs  impl_stream_trait.rs  impl_transaction_session.rs  impl_transaction_trait.rs  mod.rs
rseata-error/: Cargo.toml
rseata-error/crates/rseata-error-derive/: Cargo.toml
rseata-error/crates/rseata-error-derive/src/: lib.rs
rseata-error/src/: lib.rs
rseata-micro/: Cargo.toml
rseata-micro/src/: lib.rs
rseata-proto/: Cargo.toml  build.rs
rseata-proto/proto/: rseata.proto
rseata-proto/src/: lib.rs
rseata-rm/: Cargo.toml
rseata-rm/src/: config.rs  lib.rs
rseata-rm/src/resource/: impl_branch_manager_inbound.rs  impl_branch_manager_outbound.rs  impl_branch_transaction_registry.rs  impl_resource_registry.rs  mod.rs
rseata-tc/: Cargo.toml
rseata-tc/src/: context.rs  error.rs  init.rs  lib.rs  main.rs  types.rs
rseata-tc/src/audit_logger/: mod.rs
rseata-tc/src/config/: mod.rs
rseata-tc/src/coordinator/: mod.rs
rseata-tc/src/coordinator/core/: mod.rs
rseata-tc/src/coordinator/core/at_core/: impl_branch_manager_outbound.rs  impl_transaction_coordinator_outbound.rs  mod.rs
rseata-tc/src/coordinator/default_coordinator/: impl_branch_manager_outbound.rs  impl_resource_registry.rs  impl_transaction_manager.rs  mod.rs
rseata-tc/src/coordinator/default_core_holder/: impl_branch_manager_outbound.rs  impl_core_holder.rs  impl_transaction_manager.rs  mod.rs
rseata-tc/src/event/: audit_log_event_handler.rs  metrics_event_handler.rs  mod.rs
rseata-tc/src/grpc_service/: mod.rs  rm_service.rs  tm_service.rs
rseata-tc/src/resource/: mod.rs
rseata-tc/src/web/: mod.rs
rseata-tm/: Cargo.toml
rseata-tm/src/: lib.rs  transaction_manager.rs
src/: lib.rs
