[package]
name = "rseata-db-proxy"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true

[features]
default = ["mysql"]
mysql = []
postgres = []
sea_orm=[]
diesel=[]

[dependencies]
rseata-tm = { path = "../rseata-tm" , version = "0.1.1" }
rseata-rm = { path = "../rseata-rm"  , version = "0.1.1"}
rseata-core = { path = "../rseata-core" , version = "0.1.1"}
sqlparser={workspace = true}

serde_json={workspace = true}

sea-orm={ version ="=2.0.0-rc.18", features = [ "debug-print", "runtime-tokio-native-tls", "sqlx-mysql" ,"proxy"]}
async-trait = {workspace = true}
