[package]
name = "rseata-db-proxy"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true

[features]
default = ["mysql"]
mysql = []
postgres = []
sea_orm = []
diesel = []

[dependencies]
rseata-tm = { path = "../rseata-tm", version = "0.1.1" }
rseata-rm = { path = "../rseata-rm", version = "0.1.1" }
rseata-core = { path = "../rseata-core", version = "0.1.1" }

tokio = {workspace = true}
anyhow = { workspace = true }
tracing = { workspace = true }
sqlparser = { workspace = true }
serde_json = { workspace = true }

sea-orm = { workspace = true, features = ["debug-print", "runtime-tokio-native-tls", "sqlx-mysql"] }
async-trait = { workspace = true }
uuid = { version = "1.18.1", features = ["v4"] }
