[package]
name = "rseata-proto"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
tonic={workspace = true}
prost={workspace = true}
tonic-prost ={workspace = true}

[build-dependencies]
tonic-prost-build ={workspace = true}
walkdir = {workspace = true}
