[package]
name = "rseata-tm"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]

rseata-core = { path = "../rseata-core", version = "0.1.2" }
rseata-proto = { path = "../rseata-proto", version = "0.1.2" }

dotenv = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }




futures = {workspace = true}
lazy_static= {workspace = true}