[package]
name = "order-service"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
rseata = { path = "../..", features = ["full", "sea_orm"] }
example-proto={path = "../../examples/example-proto",features = ["client"]}

axum = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { workspace = true }
dotenv = { workspace = true }
