[package]
name = "user-service"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
rseata = { path = "../..",features = ["full"] }
example-proto = { path = "../../examples/example-proto", features = ["server"] }

axum = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
dotenv = { workspace = true }
uuid = { version = "1.18.1", features = ["v4"] }

